<resources>
    <string name="app_name">AirQA</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="change_username_pref">Email</string>
    <string name="change_password_pref">User ID (tap to copy)</string>
    <string name="logout_pref">Log out</string>
    <string name="logout_summary">Log out of your account</string>
    <string name="email_pref">Hello blank fragment</string>
    <string name="Asset_info">Asset Info</string>
    <string name="Asset_id">Asset id</string>
    <string name="Welcome">Welcome</string>
    <string name="Welcome_info">Please login with your information</string>
    <string name="Password">Password</string>
    <string name="Remember_me">Remember me</string>
    <string name="Forgot_Password">Forgot password</string>
    <string name="Login">Login</string>
    <string name="Login_info">or Login with</string>
    <string name="CreateAccount">Create new account</string>
    <string name="CreateAccount_info">Don\'t have an account</string>
    <string name="Username">Username</string>
    <string name="Slogan">Expect more from your air</string>
    <string name="Signup">Sign Up</string>
    <string name="Signup_info">Create your new account</string>
    <string name="Email">Email address</string>
    <string name="Re_Password">Re-enter Password</string>
    <string name="helper_Password">* Use 8 characters or more for your password</string>
    <string name="Humidity">Humidity</string>
    <string name="Temperature">Temperature</string>
    <string name="Select_language">Select Language</string>
    <string name="Created_On">Created On</string>
    <string name="English">English</string>
    <string name="Vietnamese">Vietnamese</string>
    <string name="Japanese">japanese</string>
    <string name="General">GENERAL</string>
    <string name="ACCOUNT">ACCOUNT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Logout">Log out</string>
    <string name="Logout_setting">Are you sure you want to log out?</string>
    <string name="Predict_Title">Predict Air Quality</string>
    <string name="Predict_label">Default weather - 1 hour in advance</string>
    <string name="WindSpeed">Wind Speed</string>
    <string name="Start_Date">Start Date</string>
    <string name="End_Date">End Date</string>
    <string name="Attribute">Attribute</string>
    <string name="Asset_Name">Asset Name</string>
    <string name="SHOW_CHART">SHOW CHART</string>
    <string name="DOWNLOAD_ASSET">DOWNLOAD ASSET</string>
    <string name="Asset_List">Asset List</string>
    <string name="Last_updated">Last updated:</string>
    <string name="INFORMATION">INFORMATION</string>
    <string name="Rainfall">Rainfall</string>
    <string name="Show_all_informations">Show all informations</string>
    <string name="morning_weather">Good morning! The weather looks great for outdoor activities. It\'s %1$s°C outside, humidity is %2$s%%, wind speed is about %3$s km/h, and there\'s a bit of rainfall, %4$smm.</string>
    <string name="noon_weather">Hello! It\'s noon. Temperature is %1$s°C, humidity around %2$s%%, wind speed at %3$s km/h, and rainfall %4$smm.</string>
    <string name="afternoon_weather">Good afternoon! It\'s a perfect time to be outside. Temperature outside is %1$s°C, humidity level about %2$s%%, wind speed currently at %3$s km/h, and rainfall %4$smm.</string>
    <string name="evening_weather">Good evening! It\'s getting dark, better not stay up too late. The temperature\'s at %1$s°C, humidity at %2$s%%, wind speed approximately %3$s km/h, and there\'s a bit of rainfall, %4$smm.</string>
    <string name="night_weather">Good night! It\'s late, get some rest. The temperature\'s at %1$s°C, humidity at %2$s%%, wind speed approximately %3$s km/h, and there\'s a bit of rainfall, %4$smm.</string>
    <string name="dawn_weather">Good dawn! It\'s early, get some sleep. Temperature currently at %1$s°C, humidity is %2$s%%, wind speed around %3$s km/h, and there\'s a bit of rainfall, %4$smm.</string>
    <string name="Loading_data">Loading data, this will take a bit...</string>
    <string name="Getting_assets_information">Getting assets information</string>
    <string name="Failed_to_get_an_asset">Failed to get an asset</string>
    <string name="Something_went_wrong">Something went wrong!</string>
    <string name="Sign_up_successful">Sign up successful, now you can log in!</string>
    <string name="Wrong_username_password.">Wrong username or password.</string>
    <string name="An_error_has_occurred">An error has occurred, please try again.</string>
    <string name="Logged_in_with">Logged in with</string>
    <string name="Requesting_new_token">Requesting new token...</string>
    <string name="New_token">New token:</string>
    <string name="Token_expired">Token expired</string>
    <string name="Token_expired_info">Token expired, please log in manually</string>
    <string name="invalid_email_or_username">invalid email or username</string>
    <string name="good_morning1">Good morning! Temperature: %s°C, Humidity: %s%%</string>
    <string name="hello_noon1">Hello! Noon temperature: %s°C, Humidity: %s%%</string>
    <string name="good_afternoon1">Good afternoon! Temperature: %s°C, Humidity: %s%%</string>
    <string name="good_evening1">Good evening! Temperature: %s°C, Humidity: %s%%</string>
    <string name="good_night1">Good night! Temperature: %s°C, Humidity: %s%%</string>
    <string name="good_dawn1">Good dawn! Temperature: %s°C, Humidity: %s%%</string>
    <string name="Actual_value">Actual value:</string>
    <string name="morning_weather2">Good morning! The weather looks great for outdoor activities. PM10: %1$s outside, PM25: is %2$s, CO2: is about %3$s km/h, and AQI:, %4$s.</string>
    <string name="noon_weather2">Good noon! PM10: %1$s outside, PM25: is %2$s, CO2: is about %3$s km/h, and AQI:, %4$s.</string>
    <string name="afternoon_weather2">Good afternoon! PM10: %1$s outside, PM25: is %2$s, CO2: is about %3$s km/h, and AQI:, %4$s.</string>
    <string name="evening_weather2">Good evening! PM10: %1$s outside, PM25: is %2$s, CO2: is about %3$s km/h, and AQI:, %4$s.</string>
    <string name="night_weather2">Good night! PM10: %1$s outside, PM25: is %2$s, CO2: is about %3$s km/h, and AQI:, %4$s.</string>
    <string name="dawn_weather2">Good dawn! PM10: %1$s outside, PM25: is %2$s, CO2: is about %3$s km/h, and AQI:, %4$s.</string>
</resources>